--- a/style.css
+++ b/style.css
@@ -1,305 +1,284 @@
-#foto{
- box-shadow : 0 0 12px black;
- border-radius : 20px;
-}
-html {
-  box-sizing: border-box;
+    	*{
+    margin: 0;
+    padding: 0;
 }
 
-body {
-  margin: 0;
-  font-family: "Work Sans", sans-serif;
+.main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(iya.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    overflow: auto;
 }
 
-.container {
-  height: 100vh;
-  width: 100vh;
-  margin: 0 auto;
-  text-align: center;
-  visibility: hidden;
-  position: relative;
-  overflow: hidden;
+.navbar{
+    width: 1200px;
+    height: 75px;
+    margin: auto;
 }
 
-.container div.six {
-  top: 10vh;
-  z-index: 1;
+.icon{
+    width: 200px;
+    float: left;
+    height: 70px;
 }
 
-.container div.seven,
-.container div.eight {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
+.logo{
+    color: #ff7200;
+    font-size: 35px;
+    font-family: Arial;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+    margin-top: 5px
 }
 
-.container > div {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 20vh;
+.menu{
+    width: 400px;
+    float: left;
+    height: 70px;
 }
 
-.one {
-  font-size: 4.5rem;
+ul{
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.one > img {
-  vertical-align: middle;
-  margin-bottom: 10px;
-  max-width: 100%;
-  height: auto;
+ul li{
+    list-style: none;
+    margin-left: 62px;
+    margin-top: 27px;
+    font-size: 14px;
 }
 
-.two {
-  font-size: 1.2rem;
-  font-weight: lighter;
+ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
 }
 
-.three {
-  font-size: 3rem;
+ul li a:hover{
+    color: #ff7200;
 }
 
-.four .text-box {
-  width: 600px;
-  margin: 0 auto;
-  border: 3px solid #aaa;
-  border-radius: 5px;
-  padding: 10px;
-  position: relative;
+.search{
+    width: 330px;
+    float: left;
+    margin-left: 270px;
 }
 
-.text-box p {
-  margin: 0;
-  text-align: left;
+.srch{
+    font-family: 'Times New Roman';
+    width: 200px;
+    height: 40px;
+    background: transparent;
+    border: 1px solid #ff7200;
+    margin-top: 13px;
+    color: #fff;
+    border-right: none;
+    font-size: 16px;
+    float: left;
+    padding: 10px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
-.text-box span {
-  visibility: hidden;
+.btn{
+    width: 100px;
+    height: 40px;
+    background: #ff7200;
+    border: 2px solid #ff7200;
+    margin-top: 13px;
+    color: #fff;
+    font-size: 15px;
+    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+.btn:hover{
+    color: #000;
 }
 
-.text-box .fake-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  color: #fff;
-  background-color: rgb(21, 161, 237);
-  padding: 5px 8px;
-  border-radius: 3px;
+.btn:focus{
+    outline: none;
 }
 
-.five p {
-  font-size: 2rem;
-  position: absolute;
-  left: 0;
-  right: 0;
+.srch:focus{
+    outline: none;
 }
 
-.idea-3 strong {
-  padding: 3px 5px;
-  border-radius: 3px;
-  display: inline-block;
+.content{
+    width: 1200px;
+    height: auto;
+    margin: auto;
+    color: #fff;
+    position: relative;
 }
 
-.five .idea-5 {
-  font-size: 4rem;
+.content .par{
+    padding-left: 20px;
+    padding-bottom: 25px;
+    font-family: Arial;
+    letter-spacing: 1.2px;
+    line-height: 30px;
 }
 
-.idea-5 span,
-.idea-6 span,
-.wish-hbd span {
-  display: inline-block;
+.content h1{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    padding-left: 20px;
+    margin-top: 9%;
+    letter-spacing: 2px;
 }
 
-.idea-6 span {
-  font-size: 15rem;
+.content .cn{
+    width: 160px;
+    height: 40px;
+    background: #ff7200;
+    border: none;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .4s ease;
+    position: relative;
+    top: 100px;
+    
 }
 
-.six {
-  position: relative;
+.content .cn a{
+    text-decoration: none;
+    color: #000;
+    transition: .3s ease;
 }
 
-.six img {
-  display: inline-block;
-  max-width: 100%;
-  height: 350px;
+.cn:hover{
+    background-color: #fff;
 }
 
-.six .hat {
-  position: absolute;
-  width: 80px;
-  top: -35px;
-  left: 41.5%;
-  /* transform: scale(0.1); */
+.content span{
+    color: #ff7200;
+    font-size: 65px
 }
 
-.baloons img {
-  display: inline-block;
-  position: absolute;
+.form{
+    width: 250px;
+    height: 380px;
+    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+    position: absolute;
+    top: 150px;
+    right: 30px;
+    transform: translate(0%,-5%);
+    border-radius: 10px;
+    padding: 25px;
+    position: fixed;
 }
 
-.baloons img:nth-child(even) {
-  left: -10%;
+.form h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 22px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
 }
 
-.baloons img:nth-child(odd) {
-  right: -10%;
+.form input{
+    width: 240px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid #ff7200;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
 }
 
-.baloons img:nth-child(3n + 0) {
-  left: 30%;
+.form input:focus{
+    outline: none;
 }
 
-.eight svg {
-  width: 25px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  z-index: -1;
+::placeholder{
+    color: #fff;
+    font-family: Arial;
 }
 
-.eight svg:nth-child(1) {
-  top: 7vh;
-  left: 5vw;
-  fill: #bd6ecf;
+.btnn{
+    width: 240px;
+    height: 40px;
+    background: #ff7200;
+    border: none;
+    margin-top: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #fff;
+    transition: 0.4s ease;
 }
-
-.eight svg:nth-child(2) {
-  top: 23vh;
-  left: 35vw;
-  fill: #7dd175;
+.btnn:hover{
+    background: #fff;
+    color: #ff7200;
 }
-
-.eight svg:nth-child(3) {
-  top: 33vh;
-  left: 23vw;
-  fill: #349d8b;
+.btnn a{
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
 }
-
-.eight svg:nth-child(4) {
-  top: 43vh;
-  left: 57vw;
-  fill: #347a9d;
+.form .link{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    padding-top: 20px;
+    text-align: center;
 }
-
-.eight svg:nth-child(5) {
-  top: 68vh;
-  left: 7vw;
-  fill: #c66053;
+.form .link a{
+    text-decoration: none;
+    color: #ff7200;
 }
-
-.eight svg:nth-child(6) {
-  top: 42vh;
-  left: 77vw;
-  fill: #bfaa40;
+.liw{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
 }
-
-.eight svg:nth-child(7) {
-  top: 68vh;
-  left: 83vw;
-  fill: #e3bae8;
+.icons a{
+    text-decoration: none;
+    color: #fff;
 }
-
-.eight svg:nth-child(8) {
-  top: 86vh;
-  left: 37vw;
-  fill: #8762cb;
+.icons ion-icon{
+    color: #fff;
+    font-size: 30px;
+    padding-left: 14px;
+    padding-top: 5px;
+    transition: 0.3s ease;
 }
-
-.eight svg:nth-child(9) {
-  top: 94vh;
-  left: 87vw;
-  fill: #9a90da;
+.icons ion-icon:hover{
+    color: #ff7200;
 }
-
-.wish-hbd {
-  font-size: 3em;
-  margin: 0;
-  text-transform: uppercase;
+div.kata{
+	width: 500px;
 }
-
-.wish h5 {
-  font-weight: lighter;
-  font-size: 2rem;
-  margin: 10px 0 0;
+div.tulisan{
+	width: 400px;
+	height: 200px;
+	overflow: auto;
+	margin: auto;
+	background: rgba(0,0,0,.3);
+	padding: 5px;
 }
-
-.nine p {
-  font-size: 2rem;
-  font-weight: lighter;
+span.hem{
+	color: whitesmoke;
+	font-family: arial;
 }
-
-#replay {
-  z-index: 3;
-  cursor: pointer;
-}
-
-/* Media Queries */
-@media screen and (max-height: 1000px) {
-  .six .hat {
-    left: 40%;
-  }
-}
-
-@media screen and (max-height: 800px) {
-  .six .hat {
-    left: 37%;
-  }
-}
-
-@media screen and (max-height: 700px) {
-  .six .hat {
-    left: 32%;
-  }
-}
-
-@media screen and (max-height: 850px) and (max-width: 450px) {
-  .six .hat {
-    left: 32%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .container {
-    width: 90%;
-  }
-
-  .four .text-box {
-    width: 90%;
-  }
-
-  .text-box .fake-btn {
-    right: 5px;
-    bottom: -38px;
-  }
-
-  .idea-5 span {
-    display: block;
-  }
-
-  .idea-6 span {
-    font-size: 10rem;
-  }
-
-  .six .hat {
-    width: 50px;
-    top: -20px;
-  }
-
-  .wish-hbd {
-    font-size: 2.2em;
-  }
-
-  .wish h5 {
-    font-size: 1.4rem;
-  }
-
-  .nine p {
-    font-size: 1.5rem;
-    font-weight: lighter;
-  }
-}
-		
-			
